# code-agent

./: .env.example  .gitguardian.yaml  .gitignore  Dockerfile  README.md  adk_samples_research.md  docker-compose.yml  main.py  pyproject.toml
code_agent/: __init__.py  agent.json  agent.py  config.py  guardrails.py  models.py
code_agent/a2a/: __init__.py  agent_card.py  callbacks.py  models.py  runner.py  server.py  stores.py  task_queue.py
code_agent/agents/: __init__.py  architect_agent.py  code_navigator.py  code_review_agent.py  code_writer.py  debug_agent.py  debugger_agent.py  docs_agent.py  file_agent.py  git_agent.py  pr_reviewer.py  security_agent.py  shell_agent.py  vcs_agent.py
code_agent/indexer/: __init__.py  chunker.py  embedder.py  repository_indexer.py  workspace_crawler.py
code_agent/pipelines/: __init__.py  feature_pipeline.py  review_pipeline.py
code_agent/search/: __init__.py  hybrid_search.py  lexical_search.py  vector_store.py
code_agent/services/: auto_dream.py  code_graph.py  context_manager.py  memory_preloader.py  prompt_builder.py
code_agent/storage/: __init__.py  gemini_embedding.py  memory_factory.py  rag_store.py  session_factory.py  workspace_store.py
code_agent/tools/: __init__.py  approval_tools.py  code_tools.py  file_tools.py  git_tools.py  jira_tools.py  memory_tools.py  search_tools.py  security_tools.py  shell_tools.py  vcs_tools.py
code_agent/vcs/: __init__.py  base.py  bitbucket_cloud_provider.py  bitbucket_server_provider.py  factory.py  github_provider.py
code_agent/workspace/: context_builder.py  manager.py  registry.py
docs/: adk-guardrails.md
evals/: __init__.py  conftest.py  test_guardrails.py
evals/datasets/: guardrail_cases.json
k8s/: deployment.yaml
scripts/: patch_adk.py
tests/: conftest.py  test_code_graph.py  test_context_manager.py  test_memory_preloader.py  test_memory_tools.py  test_prompt_builder.py
